# RustLabs

./: .env  Cargo.toml  tasks.json  users.json
migrations/: init.sql
src/: main.rs
src/calculator/: mod.rs
src/realtime_messenger/: auth.rs  handlers.rs  mod.rs  models.rs  storage.rs  websocket.rs
src/realtime_messenger/ui/: web.rs
src/todo_list/: mod.rs
