[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
sha2 = "0.10"
bcrypt = "0.16.0"
dotenv = "0.15"
env_logger = "0.11.6"
log = "0.4"
warp = "0.3"
